Fix horizontal scrollbar issue.

--- a/src/style.css
+++ b/src/style.css
@@ -4,5 +4,5 @@ body {
 }
 
 html {
-  font-size: 18px;
+  /* font-size: 18px; */
 }
